--- a/Test/MainWindow.xaml
+++ b/Test/MainWindow.xaml
@@ -10,11 +10,14 @@
         Width="525"
         Height="350"
         mc:Ignorable="d">
-    <Grid>
+    <StackPanel>
+        <se:StackExpanderItem >sda</se:StackExpanderItem>
         <se:StackExpander>
             <system:String>1</system:String>
             <system:String>2</system:String>
-            <Button>dawd</Button>
+           
+            <Button>aaa</Button>
         </se:StackExpander>
-    </Grid>
+
+    </StackPanel>
 </Window>
