--- a/StackExpanderControl/Themes/Generic.xaml
+++ b/StackExpanderControl/Themes/Generic.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:StackExpanderControl">
+    
     <Style TargetType="{x:Type local:StackExpander}">
         <Setter Property="Template">
             <Setter.Value>
@@ -13,16 +14,18 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        <Setter Property="ItemTemplate">
+        
+<!--        <Setter Property="ItemTemplate">
             <Setter.Value>
                 <DataTemplate>
                     <local:StackExpanderItem></local:StackExpanderItem>
                 </DataTemplate>
             </Setter.Value>
-        </Setter>
+        </Setter>-->
     </Style>
 
-    <Style TargetType="{x:Type local:StackExpanderItem}">
+    
+  <!--  <Style TargetType="{x:Type local:StackExpanderItem}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:StackExpanderItem}">
@@ -54,5 +57,5 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
+    </Style>-->
 </ResourceDictionary>
