--- a/StackExpanderControl/Themes/Generic.xaml
+++ b/StackExpanderControl/Themes/Generic.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:StackExpanderControl">
-    
+
     <Style TargetType="{x:Type local:StackExpander}">
         <Setter Property="Template">
             <Setter.Value>
@@ -14,48 +14,15 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-        
-<!--        <Setter Property="ItemTemplate">
-            <Setter.Value>
-                <DataTemplate>
-                    <local:StackExpanderItem></local:StackExpanderItem>
-                </DataTemplate>
-            </Setter.Value>
-        </Setter>-->
     </Style>
 
-    
-  <!--  <Style TargetType="{x:Type local:StackExpanderItem}">
-        <Setter Property="Template">
+    <Style TargetType="{x:Type local:StackExpanderItem}">
+        <Setter Property="HeaderTemplate">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:StackExpanderItem}">
-                    <Border Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
-                        <RadioButton x:Name="RadioButton"
-                                     Content="aaa"
-                                     GroupName="PART_ITEM">
-                            <RadioButton.Template>
-                                <ControlTemplate>
-                                    <local:ExpanderEx DisplayHeaderPath="{Binding RelativeSource={RelativeSource AncestorType=local:StackExpanderItem},
-                                                                                  Path=DisplayHeaderPath}"
-                                                      DisplayMemberPath="{Binding RelativeSource={RelativeSource AncestorType=local:StackExpanderItem},
-                                                                                  Path=DisplayMemberPath}"
-                                                      Header="{Binding RelativeSource={RelativeSource TemplatedParent},
-                                                                       Path=DataContext}"
-                                                      HeaderTemplate="{Binding RelativeSource={RelativeSource AncestorType=local:StackExpanderItem},
-                                                                               Path=HeaderTemplate}"
-                                                      IsExpanded="{Binding RelativeSource={RelativeSource TemplatedParent},
-                                                                           Path=IsChecked}" >
-                                        <ContentPresenter Content="{Binding RelativeSource={RelativeSource AncestorType=local:StackExpanderItem},
-                                                                               Path=Content}"></ContentPresenter>
-                                    </local:ExpanderEx>
-                                </ControlTemplate>
-                            </RadioButton.Template>
-                        </RadioButton>
-                    </Border>
-                </ControlTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding}"/>
+                </DataTemplate>
             </Setter.Value>
         </Setter>
-    </Style>-->
+    </Style>
 </ResourceDictionary>
